fix: form layout on small screens

--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -7,7 +7,7 @@
 }
 .form {
   display: grid;
-  grid-template-columns: 300px;
+  grid-template-columns: minmax(200px, 300px);
   grid-auto-rows: 40px;
   grid-gap: 1rem;
   // margin: 2rem;
@@ -34,4 +34,10 @@
   width: 300px;
   height: 300px;
   background: $main-background;
+}
+
+@media only screen and (max-width: 600px) {
+  .form {
+    padding: 2rem 1rem;
+  }
 }
